--- a/src/app/training/current-training/current-training.component.html
+++ b/src/app/training/current-training/current-training.component.html
@@ -1,1 +1,6 @@
-<p>current-training works!</p>
+<section class="current-training" fxLayout="column" fxLayoutAlign="center center">
+  <mat-progress-spinner mode="determinate" [value]="progress"></mat-progress-spinner>
+  <h2>{{ progress }}%</h2>
+  <p>Keep on going, you can do it!</p>
+  <button mat-raised-button color="accent" (click)="onStopTimer()">Stop</button>
+</section>
