--- a/src/app/training/training.component.html
+++ b/src/app/training/training.component.html
@@ -1,1 +1,9 @@
-<p>training works!</p>
+<mat-tab-group *ngIf="!ongoingTraining">
+  <mat-tab label="New exercise">
+    <app-new-training (trainingStart)="ongoingTraining = true"></app-new-training>
+  </mat-tab>
+  <mat-tab label="Past exercises">
+    <app-past-trainings></app-past-trainings>
+  </mat-tab>
+</mat-tab-group>
+<app-current-training *ngIf="ongoingTraining" (trainingEnd)="ongoingTraining = false"></app-current-training>
