--- a/src/app/navigation/header/header.component.html
+++ b/src/app/navigation/header/header.component.html
@@ -7,10 +7,10 @@
   <div><a routerLink="/">LOGO</a></div>
   <div fxFlex fxLayout fxLayoutAlign="flex-end" fxHide.xs>
     <ul fxLayout fxLayoutGap="10px" class="navigation-items">
-      <li><a routerLink="/signup">Sign up</a></li>
-      <li><a routerLink="/login">Log in</a></li>
-      <li><a routerLink="/training">Training</a></li>
-      <li><a>Log out</a></li>
+      <li *ngIf="!isAuth"><a routerLink="/signup">Sign up</a></li>
+      <li *ngIf="!isAuth"><a routerLink="/login">Log in</a></li>
+      <li *ngIf="isAuth"><a routerLink="/training">Training</a></li>
+      <li *ngIf="isAuth"><a (click)="onLogout()">Log out</a></li>
     </ul>
   </div>
 </mat-toolbar>
