--- a/src/app/navigation/sidenav-list/sidenav-list.component.html
+++ b/src/app/navigation/sidenav-list/sidenav-list.component.html
@@ -1,18 +1,21 @@
 <mat-nav-list>
-  <a mat-list-item routerLink="/signup" (click)="onCloseSidenav()">
+  <a mat-list-item routerLink="/signup"
+     (click)="onCloseSidenav()" *ngIf="!isAuth">
     <mat-icon>face</mat-icon>
     <span class="nav-caption">Sign up</span>
   </a>
-  <a mat-list-item routerLink="/login" (click)="onCloseSidenav()">
+  <a mat-list-item routerLink="/login"
+     (click)="onCloseSidenav()" *ngIf="!isAuth">
     <mat-icon>input</mat-icon>
     <span class="nav-caption">Log in</span>
   </a>
-  <a mat-list-item routerLink="/training" (click)="onCloseSidenav()">
+  <a mat-list-item routerLink="/training"
+     (click)="onCloseSidenav()" *ngIf="isAuth">
     <mat-icon>directions_run</mat-icon>
     <span class="nav-caption">Training</span>
   </a>
-  <mat-list-item>
-    <button mat-icon-button (click)="onCloseSidenav()">
+  <mat-list-item *ngIf="isAuth">
+    <button mat-icon-button (click)="onLogout()">
       <mat-icon>eject</mat-icon>
       <span class="nav-caption">Log out</span>
     </button>
