--- a/src/app/training/current-training/stop-training.component.html
+++ b/src/app/training/current-training/stop-training.component.html
@@ -1,5 +1,8 @@
-<h2 mat-dialog-title>Are you sure?</h2>
-<mat-dialog-actions>
+<h2 fxLayoutAlign="center" mat-dialog-title>Are you sure?</h2>
+<mat-dialog-content>
+  <p>You have already got {{ data.progress }}%! </p>
+</mat-dialog-content>
+<mat-dialog-actions fxLayoutAlign="space-around">
   <button mat-raised-button [mat-dialog-close]="true" color="accent">Yes</button>
   <button mat-raised-button [mat-dialog-close]="false" color="primary">Cancel</button>
 </mat-dialog-actions>
