--- a/src/app/training/past-trainings/past-trainings.component.html
+++ b/src/app/training/past-trainings/past-trainings.component.html
@@ -6,7 +6,7 @@
 <mat-table [dataSource]="dataSource" matSort>
   <ng-container matColumnDef="date">
     <mat-header-cell *matHeaderCellDef mat-sort-header>Date</mat-header-cell>
-    <mat-cell *matCellDef="let element">{{ element.date | date : 'MMM d, y, H:mm' }}</mat-cell>
+    <mat-cell *matCellDef="let element">{{ element.date.toDate() | date : 'MMM d, y, H:mm' }}</mat-cell>
   </ng-container>
 
   <ng-container matColumnDef="name">
