--- a/src/app/training/new-training/new-training.component.html
+++ b/src/app/training/new-training/new-training.component.html
@@ -1,9 +1,9 @@
 <section class="new-training" fxLayout fxLayoutAlign="center">
   <form (ngSubmit)="onStartTraining(trainingForm)" #trainingForm="ngForm">
-    <mat-card fxFlex="400px" fxFlex.xs="100%">
+    <mat-card fxFlex="400px" fxFlex.xs="100%" *ngIf="!isLoading">
       <mat-card-title fxLayoutAlign="center">Time to start a workout!</mat-card-title>
       <mat-card-content fxLayoutAlign="center">
-        <mat-form-field>
+        <mat-form-field *ngIf="exercises">
           <mat-label>Choose exercise</mat-label>
           <mat-select ngModel name="selectedExercise" required>
             <mat-option *ngFor="let exercise of exercises" [value]="exercise.id">
@@ -13,8 +13,11 @@
         </mat-form-field>
       </mat-card-content>
       <mat-card-actions fxLayoutAlign="center">
-        <button type="submit" mat-raised-button color="primary" [disabled]="trainingForm.invalid">Start</button>
+        <button *ngIf="exercises" type="submit" mat-raised-button color="primary"
+                [disabled]="trainingForm.invalid">Start</button>
+        <button *ngIf="!exercises" type="button" mat-button (click)="fetchExercises()">Fetch again</button>
       </mat-card-actions>
     </mat-card>
+    <mat-spinner *ngIf="isLoading"></mat-spinner>
   </form>
 </section>
