--- a/src/app/navigation/header/header.component.html
+++ b/src/app/navigation/header/header.component.html
@@ -8,10 +8,10 @@
   <div><a routerLink="/">FITNESS Tracker</a></div>
   <div fxFlex fxLayout fxLayoutAlign="flex-end" fxHide.xs>
     <ul fxLayout fxLayoutGap="10px" class="navigation-items">
-      <li *ngIf="!isAuth"><a routerLink="/signup">Sign up</a></li>
-      <li *ngIf="!isAuth"><a routerLink="/login">Log in</a></li>
-      <li *ngIf="isAuth"><a routerLink="/training">Training</a></li>
-      <li *ngIf="isAuth"><a (click)="onLogout()">Log out</a></li>
+      <li *ngIf="!(isAuth$ | async)"><a routerLink="/signup">Sign up</a></li>
+      <li *ngIf="!(isAuth$ | async)"><a routerLink="/login">Log in</a></li>
+      <li *ngIf="isAuth$ | async"><a routerLink="/training">Training</a></li>
+      <li *ngIf="isAuth$ | async"><a (click)="onLogout()">Log out</a></li>
     </ul>
   </div>
 </mat-toolbar>
