--- a/src/app/navigation/sidenav-list/sidenav-list.component.html
+++ b/src/app/navigation/sidenav-list/sidenav-list.component.html
@@ -1,20 +1,20 @@
 <mat-nav-list>
   <a mat-list-item routerLink="/signup"
-     (click)="onCloseSidenav()" *ngIf="!isAuth">
+     (click)="onCloseSidenav()" *ngIf="!(isAuth$ | async)">
     <mat-icon>face</mat-icon>
     <span class="nav-caption">Sign up</span>
   </a>
   <a mat-list-item routerLink="/login"
-     (click)="onCloseSidenav()" *ngIf="!isAuth">
+     (click)="onCloseSidenav()" *ngIf="!(isAuth$ | async)">
     <mat-icon>input</mat-icon>
     <span class="nav-caption">Log in</span>
   </a>
   <a mat-list-item routerLink="/training"
-     (click)="onCloseSidenav()" *ngIf="isAuth">
+     (click)="onCloseSidenav()" *ngIf="isAuth$ | async">
     <mat-icon>directions_run</mat-icon>
     <span class="nav-caption">Training</span>
   </a>
-  <mat-list-item *ngIf="isAuth">
+  <mat-list-item *ngIf="isAuth$ | async">
     <button mat-icon-button (click)="onLogout()">
       <mat-icon>eject</mat-icon>
       <span class="nav-caption">Log out</span>
